Alterações gerais (muitas)

--- a/views/help.jade
+++ b/views/help.jade
@@ -1,10 +1,9 @@
 extends layout
 
 block css
-   link(rel='stylesheet', href='/stylesheets/tokenfield/css/bootstrap-tokenfield.css')
-   link(rel='stylesheet', href='/stylesheets/jquery-ui/jquery-ui.css')
-   link(rel='stylesheet', href='/stylesheets/editors/src/bootstrap-wysihtml5.css')
-   link(rel='stylesheet', href='/stylesheets/editors/lib/css/bootstrap3-wysiwyg5-color.css')
+   link(rel='stylesheet', href='/stylesheets/bootstrap-tokenfield.min.css')
+   link(rel='stylesheet', href='/stylesheets/jquery-ui.min.css')
+   link(rel='stylesheet', href='/stylesheets/bootstrap-wysihtml5.min.css')
 
 block content
    div.panel.panel-default
