--- a/views/perfil.jade
+++ b/views/perfil.jade
@@ -1,8 +1,8 @@
 extends layout
 
 block css
-   link(rel='stylesheet', href='/stylesheets/jquery-ui/jquery-ui.css')
-   script(src='/stylesheets/datatables/media/js/jquery.js')
+   link(rel='stylesheet', href='/stylesheets/jquery-ui.min.css')
+   script(src='/javascripts/jquery.min.js')
    script.
       if (#{show}) {
          $(document).ready(function(){
@@ -45,47 +45,4 @@ block content
                   button.btn.btn-default(type="button" data-dismiss="modal") Fechar
 
 block script
-   script.
-      $('select#perfils').on('click',function(event){
-         $('#descricao').val('');
-         $('#descricao').val($('select#perfils option:selected').text());
-      });
-
-      $('select#perfils').on('keyup',function(event){
-         $('#descricao').val('');
-         $('#descricao').val($('select#perfils option:selected').text());
-      });
-
-      $('#salvarPerfil').on('click',function(event){
-         var descricao = $.trim($('#descricao').val());
-         rest.post('/perfil/new',{descricao: descricao}, function(data){
-                document.write(data);
-                document.close();
-                $('select#perfils').val(descricao);
-                $('select#perfils').focus();
-                $('#descricao').val($('select#perfils option:selected').text());
-         });
-      });
-
-      $('#atualizarPerfil').on('click',function(event){
-         var perfil = $.trim($('#descricao').val());
-         var id = $("select#perfils option:selected").attr('id');
-         rest.put('/perfil/'+id+'/'+perfil,function(data){
-                document.write(data);
-                document.close();
-                $('select#perfils').val(perfil);
-                $('select#perfils').focus();
-                $('#descricao').val($('select#perfils option:selected').text());
-         });
-      });
-
-      $('#apagarPerfil').on('click',function(event){
-         var perfil = $("select#perfils option:selected").text();
-         rest.del('/perfil/'+perfil,function(data){
-               document.write(data);
-               document.close();
-               $('select#perfils option:first-child').attr("selected", "selected");
-               $('select#perfils').focus();
-               $('#descricao').val($('select#perfils option:selected').text());
-         });
-      });
+   script(src='/javascripts/components/perfil.min.js')
