--- a/views/layout.jade
+++ b/views/layout.jade
@@ -41,10 +41,9 @@ html
                   li
                     a(href="/help") Ajuda
       block content
-    script(src='/stylesheets/jquery/jquery-2.1.3.min.js')
-    script(src='/stylesheets/jquery-ui/jquery-ui.js')
-    script(src='/stylesheets/bootstrap-3.3.4/js/bootstrap.min.js')
-    script(src='/stylesheets/bootbox/bootbox.min.js')
-    script(src='/javascripts/components/changeNavBar.js')
-    script(src='/javascripts/rest/rest.js')
+    script(src='/javascripts/jquery-2.1.3.min.js')
+    script(src='/javascripts/jquery-ui.min.js')
+    script(src='/javascripts/bootstrap.min.js')
+    script(src='/javascripts/components/changeNavBar.min.js')
+    script(src='/javascripts/rest/rest.min.js')
     block script
