--- a/views/layout.jade
+++ b/views/layout.jade
@@ -35,11 +35,16 @@ html
                           li
                             a(href="/searchForTags") Pesquisa por Tags
                           li
-                            a(href="/searchForCodigo" ) Pesquisa por Código
+                            a(href="/searchForCodigo") Pesquisa por Código
                           li
                             a(href="/searchForNota") Pesquisa por Nota
                   li
                     a(href="/help") Ajuda
+            div
+               form.navbar-form.navbar-right(action = '/logoff' method="post")
+                  div.form-group
+                    input#token(type="hidden" name="token" value="#{token}")
+                  button.btn.btn-default(type="submit") Logoff
       block content
     script(src='/javascripts/jquery-2.1.3.min.js')
     script(src='/javascripts/jquery-ui.min.js')
