--- a/views/searchForNota.jade
+++ b/views/searchForNota.jade
@@ -14,6 +14,7 @@ block css
 
 block content
    form.form-horizontal(role="form" id="formNota" method="post")
+      input#token(type="hidden" name="token" value='#{token}')
       div.form-group
          label.control-label.col-sm-2(for="nota") Nota:
          div.col-sm-10
